fix: cropper

--- a/src/app/shared/components/image-cropper/image-cropper.component.scss
+++ b/src/app/shared/components/image-cropper/image-cropper.component.scss
@@ -36,18 +36,38 @@
     position:fixed;
     background-color: black;
     max-width:800px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 50px 1fr 50px;
+    @media(max-width:799) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .title-wrapper {
         height: 50px;
     }
     .cropper-inner {
-       flex: auto;
-       display: flex;
-       align-items: center;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        @media(max-width:799px) {
+            flex: auto;
+            display: flex;
+            align-items: center;
+        }
        .crop-wrap {
+        @media(max-width:799px) {
            height: fit-content;
+        }
+        @media(min-width:800px) {
+            width:700px;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
         image-cropper {
             background-color: black;
         }
